# ChangeLog for sci-libs/gdal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/gdal/ChangeLog,v 1.55 2009/03/02 19:51:15 ranger Exp $

  02 Mar 2009; Brent Baude <ranger@gentoo.org> gdal-1.5.2.ebuild:
  Marking gdal-1.5.2 ppc64 for bug 241500

  18 Feb 2009; Steve Arnold <nerdboy@gentoo.org> gdal-1.5.3.ebuild,
  gdal-1.5.2.ebuild:
  Updated pkg_setup logic to more explicitly handle hdf4 vs. netcdf;
  should fix bugs #256423 and #238999.

  25 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> gdal-1.5.2.ebuild:
  Stable on sparc, bug #241500

  14 Dec 2008; Markus Meier <maekke@gentoo.org> gdal-1.5.2.ebuild:
  amd64/x86 stable, bug #241500

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/gdal-1.3.2-gcc4-stl.patch:
  Fix patch with absolute paths.

  10 Nov 2008; Steve Arnold <nerdboy@gentoo.org> metadata.xml,
  gdal-1.5.3.ebuild:
  Updated to new xerces-c interface, along with minor metadata update. Note
  this version enables parallel makes, so if you experience random failures
  try with -j1 and report if this fixes it.

  09 Nov 2008; Steve Arnold <nerdboy@gentoo.org>
  +files/gdal-1.5.2-xerces-64-bit.patch, gdal-1.5.2.ebuild:
  Updated 1.5.2 for newer xerces-c interface prior to stablization
  (a patched 1.5.3 will follow shortly).

*gdal-1.5.3 (18 Oct 2008)

  18 Oct 2008; Steve Arnold <nerdboy@gentoo.org> metadata.xml,
  gdal-1.5.2.ebuild, +gdal-1.5.3.ebuild:
  Updated with latest release and fixes for the perllocal.pod thing and 
  USE flag support for libecwj2 (subject to blocking bug #230802).  The
  latter support is only in 1.5.3 so 1.5.2 should be fine (ie, with the
  existing jasper support).  Also fixed some minor QA issues in older
  versions.

  12 Oct 2008; nixnut <nixnut@gentoo.org> gdal-1.5.2.ebuild:
  Stable on ppc wrt bug 241500

  12 Oct 2008; Steve Arnold <nerdboy@gentoo.org> gdal-1.3.1.ebuild,
  gdal-1.3.2.ebuild, gdal-1.4.2.ebuild, gdal-1.5.0-r1.ebuild: