@@ -9,9 +9,11 @@ DIST gdal-1.5.0.tar.gz 6167411 RMD160 25326301edbc88739fce6f33b42dfb9499842896 S
 DIST gdal-1.5.1.tar.gz 6176140 RMD160 4f0557edaf99e89cbaa540bfdbf8fa8b352204c6 SHA1 e188b82f0c4f12c6925afecfde742e3eab627d49 SHA256 407794d5846d18673df71ece278707ddb209d505a100335e21d6489a09f290fe
 DIST gdal-1.5.2.tar.gz 6180070 RMD160 37601decec7cc23ee6ea77c9c0e7c12ef3154213 SHA1 bf759b28d2218919212484c2b593edbc1c09aabb SHA256 243dabf3c45530cac8be092f9a1d838a46b46a92d4138870423006ffd6ae4001
 DIST gdal-1.5.3.tar.gz 6194379 RMD160 3178dc1cc76e79071c77ad1cca0c8e23bcb91ef3 SHA1 b8b48f44f8da6e7d5028fe7f57c79e218625b986 SHA256 8f68386582d178842bf990e2e94473ec72c3fd69de2ca757542888f1c95bbf4d
+DIST gdal-1.6.0.tar.gz 7072689 RMD160 85bf968b5ec6c2af5a02597bc4c8375d8f775fec SHA1 cae5a891231ee5794350d1626a688d802a429423 SHA256 acdc2faf7496f8d8f4680347ce30fd3a2139b5c050f13dcd6ca8a3d7f6e418a4
 EBUILD gdal-1.5.0-r1.ebuild 6220 RMD160 7b68e95aa95a015b76d47798b8e6c178f1dc7cf1 SHA1 8b6a7a2935ebdcb23ec4f25c05bb1de76ec01eff SHA256 f76938924814beb31f7c29a7b027b317b2d94430d2c2d3a5f1b718f437ae6525
 EBUILD gdal-1.5.1.ebuild 6274 RMD160 5f86eb51f51714acb993809f026931333f565571 SHA1 34a6da19fdb01ed850bef6592b5fd64c122f351f SHA256 50cec274e863ae0decb6bfdc034fa0fd14b60e6ae29c7ab2612d2bf885cb1475
 EBUILD gdal-1.5.2.ebuild 6517 RMD160 8702148dc97572de35c12e9fc4af829540b0e862 SHA1 18eb1c2c847c44ba7ba96f24a5247f1f1d415af6 SHA256 df62304e3e71b52c3482b2fe33c0d58ccbc12e05d0ee016150c040625a527371
-EBUILD gdal-1.5.3.ebuild 6751 RMD160 6665ba1573dc961b5a096f3f9e40e4b31059bf80 SHA1 9cd06ba6fab92f1da7789544788164b8b027654e SHA256 4d80f097c0d87dab826a19bd53c1939b46290073224e2a45ed433d6f5791d71a
-MISC ChangeLog 10772 RMD160 8b30adc5962fb8108f43b1e4b9663c9983d5efea SHA1 8d676be5d676fb5b2b8e9c081fc92d3e85341937 SHA256 aa9e94deaf2eae8398adc2f229b5987ec3d3ac091cd0689057808abb6a54ebb6
+EBUILD gdal-1.5.3.ebuild 6755 RMD160 21a4a80c6dbf893a0875e472934d11198e44cae2 SHA1 e2b4eed310c0c048f3859172c818458e7111731e SHA256 9b6ee4218b137bb19b24a2a3f76cfa540f4f2bb6b46056bdf73bb9836879ff5a
+EBUILD gdal-1.6.0.ebuild 6551 RMD160 9f8c629e134bff9a3dadf8963421cd0fed80f171 SHA1 125395e1c0248c33fcbf66a2b5e2a1a7cd92dcc8 SHA256 9cf326c460b74168bf4f73dfce1a00ad9ff3581593c3f855aa574b778eb45566
+MISC ChangeLog 11180 RMD160 a0c4112d62e7780265f69942abb8030fd2b42a54 SHA1 a09c63aece946030035335dfde3bc8c9fe47ac6a SHA256 faa7ea382a5d95e1aec8de581d01575fb4ec2031e76d00219d1589828927af2e
 MISC metadata.xml 1100 RMD160 edad0e7b25dec94f4b1f7a66ce2289da3115c9d1 SHA1 b3ad2e46e137bcd069a6867c6a5c9f6fbba00e66 SHA256 2aff971ad868d45f5d30128cfbc508e2c1eab7adb05028a95d182ec1821b15b3
